--- a/bpr-service/src/main/resources/application.yml
+++ b/bpr-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
 mybatis:
-  type-aliases-package: com.ht.hhr.entity
+  type-aliases-package: com.ht.bpr.entity
   mapper-locations: classpath:mapper/*Mapper.xml
   configuration:
     map-underscore-to-camel-case: true
