--- a/bpr-miniprogram/project.config.json
+++ b/bpr-miniprogram/project.config.json
@@ -50,7 +50,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wxe89ca7e0e8457f64",
+  "appid": "wx79f18a2d1e39592c",
   "projectname": "miniprogram-92",
   "condition": {},
   "editorSetting": {
