fixed: family add interface

--- a/bpr-service/src/main/resources/application.yml
+++ b/bpr-service/src/main/resources/application.yml
@@ -12,6 +12,7 @@ mybatis:
   mapper-locations: classpath:mapper/*Mapper.xml
   configuration:
     map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 pagehelper:
   helper-dialect: mysql
   reasonable: true
