--- a/bpr-miniprogram/app.json
+++ b/bpr-miniprogram/app.json
@@ -69,6 +69,7 @@
     "van-grid-item": "@vant/weapp/grid-item/index",
     "van-row": "@vant/weapp/row/index",
     "van-col": "@vant/weapp/col/index",
-    "van-divider": "@vant/weapp/divider/index"
+    "van-divider": "@vant/weapp/divider/index",
+    "van-swipe-cell": "@vant/weapp/swipe-cell/index"
   }
 }
