--- a/bpr-service/pom.xml
+++ b/bpr-service/pom.xml
@@ -8,8 +8,8 @@
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>bpr-service</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -51,14 +51,130 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.79</version>
         </dependency>
     </dependencies>
+    <build>
+        <!--<finalName>${package.name}</finalName>-->
+        <resources>
+            <!--项目配置文件-->
+            <resource>
+                <directory>src/main/resources/${active.profile}</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/application*.yml</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <excludes>
+                    <exclude>assembly.xml</exclude>
+                </excludes>
+            </resource>
+            <!--mapper配置文件-->
+            <resource>
+                <directory>src/main/resources/mapper</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
 
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <classesDirectory>target/classes/</classesDirectory>
+                    <archive>
+                        <!--生成的jar包不包含maven描述相关文件-->
+                        <addMavenDescriptor>false</addMavenDescriptor>
+                        <manifest>
+                            <!--项目启动类-->
+                            <mainClass>com.ht.bpr.BprServiceApplication</mainClass>
+                            <useUniqueVersions>false</useUniqueVersions>
+                            <!--第三方JAR加入类构建的路径maven-dependency-plugin-->
+                            <addClasspath>true</addClasspath>
+                            <!--外部依赖jar包的位置-->
+                            <classpathPrefix>lib/</classpathPrefix>
+                        </manifest>
+                        <!--                        <manifestEntries>-->
+                        <!--                            <Class-Path>.</Class-Path>-->
+                        <!--                        </manifestEntries>-->
+                    </archive>
+                </configuration>
+            </plugin>
+            <!--关键插件,maven提供的assembly插件,需要放在最后-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>make-tar.gz</id>
+                        <!--绑定的maven操作-->
+                        <phase>package</phase>
+                        <!--运行一次-->
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <!--如果不想在打包的后缀加上assembly.xml中设置的id，可以加上下面的配置-->
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <!--指定assembly插件对应的assembly.xml配置文件-->
+                            <descriptors>
+                                <descriptor>src/main/resources/assembly.xml</descriptor>
+                            </descriptors>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
+    </build>
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <active.profile>dev</active.profile>
+            </properties>
+            <!-- 把当前profile设置为默认profile，可以同时这是多个为默认-->
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources/dev</directory>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+        <profile>
+            <id>test</id>
+            <properties>
+                <active.profile>test</active.profile>
+            </properties>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources/test</directory>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+        <profile>
+            <id>prod</id>
+            <properties>
+                <active.profile>prod</active.profile>
+            </properties>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources/prod</directory>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+    </profiles>
 </project>
