--- a/bpr-service/src/main/resources/dev/application.yml
+++ b/bpr-service/src/main/resources/dev/application.yml
@@ -1,26 +1,21 @@
 server:
-  port: 8080
+  port: 2590
 spring:
   datasource:
-    url: jdbc:mysql://rm-2ze8v9g2o013w44f8wo.mysql.rds.aliyuncs.com:3306/test_m?characterEncoding=utf-8&useSSL=false
-    username: weiwan
-    password: weiwan=123
+    url: jdbc:mysql://sh-cynosdbmysql-grp-rir9gq66.sql.tencentcdb.com:27131/bpr?characterEncoding=utf-8&useSSL=false
+    username: root
+    password: zsqQ0218
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
 mybatis:
   type-aliases-package: com.ht.bpr.entity
-  mapper-locations: classpath:mapper/*Mapper.xml
+  mapper-locations: classpath*:*Mapper.xml
   configuration:
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
-pagehelper:
-  helper-dialect: mysql
-  reasonable: true
-  support-methods-arguments: true
 logging:
-  config: classpath:logback-spring.xml
+  config: ${bpr.conf.dir:./config/}logback-spring.xml
   level:
-    root: info
     com.ht.bpr.mapper: debug
 wechat:
   appId: wxe89ca7e0e8457f64
