--- a/bpr-service/src/main/resources/dev/application.yml
+++ b/bpr-service/src/main/resources/dev/application.yml
@@ -1,10 +1,16 @@
 server:
   port: 2590
+  ssl:
+    key-store: F:\\work\\bpr.pfx
+    key-store-password: J0HHy6uz
+    key-store-type: PKCS12
+http:
+  port: 2599
 spring:
   datasource:
     url: jdbc:mysql://sh-cynosdbmysql-grp-rir9gq66.sql.tencentcdb.com:27131/bpr?characterEncoding=utf-8&useSSL=false
     username: root
-    password: zsqQ0218
+    password: 1Qaz2Wsx.123
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
 mybatis:
@@ -14,7 +20,7 @@ mybatis:
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
 logging:
-  config: ${bpr.conf.dir:./config/}logback-spring.xml
+  config: classpath:logback-spring.xml
   level:
     com.ht.bpr.mapper: debug
 wechat:
