--- a/bpr-service/src/main/resources/prod/application.yml
+++ b/bpr-service/src/main/resources/prod/application.yml
@@ -1,10 +1,16 @@
 server:
   port: 2592
+  ssl:
+    key-store: ${bpr.conf.dir:./config/}bpr.pfx
+    key-store-password: J0HHy6uz
+    key-store-type: PKCS12
+http:
+  port: 2599
 spring:
   datasource:
     url: jdbc:mysql://sh-cynosdbmysql-grp-rir9gq66.sql.tencentcdb.com:27131/bpr?characterEncoding=utf-8&useSSL=false
     username: root
-    password: zsqQ0218
+    password: 1Qaz2Wsx.123
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
 mybatis:
